DEVBUG (bgs): fix minion list not showing up anymore

--- a/core/src/css/component/battlegrounds/minions-tiers/bgs-minions-list.component.scss
+++ b/core/src/css/component/battlegrounds/minions-tiers/bgs-minions-list.component.scss
@@ -5,6 +5,7 @@
 
 .bgs-minions-list {
 	width: 272px;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	min-height: 0;
